# theatremix_remote_display

./: .gitignore  Cargo.toml  Packager.toml  README.md
.github/workflows/: release.yml
scripts/: test_macos_build.sh
src/: main.rs
